--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "tw-elements": "^2.0.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
