--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "0.0.25",
     "@react-spring/web": "^9.7.4",
     "class-variance-authority": "^0.7.0",
