--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "crypto": "^1.0.1",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.9.0",
     "lucide-react": "^0.439.0",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.13.1",
@@ -34,7 +35,7 @@
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
-    "react-email": "3.0.1",
+    "react-email": "^1.10.1",
     "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
   }
